--- a/res/drawable/tag_shape_unselected.xml
+++ b/res/drawable/tag_shape_unselected.xml
@@ -5,6 +5,8 @@
  	<corners
  	    android:radius="12dp" />
  	<solid
- 	    android:color="@color/tag" />
-
+ 	    android:color="@android:color/transparent" />
+ 	<stroke 
+ 	    android:color="@color/tag"
+ 		android:width="1dp"/>
 </shape>
