--- a/res/layout/progress_dialog.xml
+++ b/res/layout/progress_dialog.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_black"
-    android:gravity="center" >
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@android:color/transparent" >
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/invoice" />
+        android:contentDescription="@string/loading"
+        android:src="@drawable/loading" />
 
 </LinearLayout>
