--- a/res/layout/window_report_filter.xml
+++ b/res/layout/window_report_filter.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/cancelImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="14dp"
@@ -25,8 +25,8 @@
 
     <ImageView
         android:id="@+id/confirmImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="14dp"
@@ -110,7 +110,7 @@
         android:layout_alignBottom="@+id/tagDivider"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="16dp"
-        android:text="@string/filter_tags"
+        android:text="@string/filter_tag"
         android:textColor="@color/hint_light_grey"
         android:textSize="14sp" />
 
