--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     
     <color name="background">#FFF5F6F8</color>
+    <color name="background_black">#FF000000</color>
     
     <color name="divider">#1A000000</color>
     
@@ -42,7 +43,7 @@
     <color name="item_approved">#FF3CB798</color>
     <color name="item_prove_ahead">#FFFF575B</color>
     
-    <color name="tag_background">#FFABABAB</color>
+    <color name="tag">#FFABABAB</color>
     
     <color name="report_status_draft">#FFA17356</color>
     <color name="report_status_submitted">#FF46A3D3</color>
