--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -12,14 +12,14 @@
 
         <ImageView
             android:id="@+id/filterImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="54dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/filter"
-            android:src="@drawable/filter" />
+            android:src="@drawable/filter_drawable" />
 
         <TextView
             android:id="@+id/myTitleTextView"
@@ -71,7 +71,7 @@
 			android:gravity="center"
 			android:textColor="@color/major_dark"
 			android:background="@drawable/title_badge_medium"
-			android:visibility="visible" />
+			android:visibility="gone" />
 		
 		<TextView
 			android:id="@+id/longBadgeTextView"
@@ -88,16 +88,14 @@
 
         <ImageView
             android:id="@+id/addImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="54dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:contentDescription="@string/add"
-            android:src="@drawable/add_report" />
+            android:src="@drawable/add_report_unselected" />
 
     </RelativeLayout>
 
