--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <FrameLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
@@ -44,12 +44,11 @@
                     android:contentDescription="@string/statistics"
                     android:src="@drawable/arc" />
 
-                <FrameLayout
+                <LinearLayout
                 	android:id="@+id/statContainer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                </FrameLayout>
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal" />
 
                 <ImageView
                     android:id="@+id/arcCoverImageView"
@@ -61,7 +60,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical" >
+                    android:layout_centerVertical="true" >
 
                     <TextView
                         android:id="@+id/mainPercentTextView"
@@ -91,7 +90,7 @@
 
                 </RelativeLayout>
                 
-            </FrameLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
