--- a/res/layout/list_report_item_show.xml
+++ b/res/layout/list_report_item_show.xml
@@ -14,11 +14,12 @@
         android:textColor="@color/font_major_dark"
         android:textSize="22sp" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
+        android:paddingBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp" >
 
@@ -33,24 +34,16 @@
             android:textColor="@color/font_minor_dark"
             android:textSize="20sp" />
 
-        <LinearLayout
-            android:id="@+id/iconLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/categoryImageView"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_below="@+id/vendorTextView"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="12dp"
-            android:gravity="right"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/categoryImageView"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:contentDescription="@string/tag"
-                android:src="@drawable/default_icon" />
-            
-        </LinearLayout>
+            android:contentDescription="@string/tag"
+            android:src="@drawable/default_icon" />
         
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
