--- a/res/layout/window_me_category.xml
+++ b/res/layout/window_me_category.xml
@@ -114,8 +114,7 @@
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        android:orientation="vertical"
-		        android:layout_margin="16dp" >
-		    </LinearLayout>
+		        android:layout_margin="16dp" />
 		
 			<include
 			    android:layout_width="match_parent"
