--- a/res/layout/activity_me_settings.xml
+++ b/res/layout/activity_me_settings.xml
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/settings"
-            android:textSize="20sp"
-            android:textColor="@color/major_light" />
+            android:textColor="@color/major_light"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
