--- a/res/layout/window_picture.xml
+++ b/res/layout/window_picture.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/background"
-	android:id="@+id/pictureLayout" >
+    android:background="@color/background" >
 
     <Button
         android:id="@+id/cameraButton"
