--- a/res/layout/activity_me_default_manager.xml
+++ b/res/layout/activity_me_default_manager.xml
@@ -19,7 +19,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/back" />
+            android:src="@drawable/back_drawable" />
 
         <TextView
             android:id="@+id/titleTextView"
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/default_manager"
-            android:textSize="20sp"
-            android:textColor="@color/major_light" />
+            android:textColor="@color/major_light"
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/confirmTextView"
@@ -39,8 +39,8 @@
 			android:paddingRight="16dp"
 			android:gravity="center"
             android:text="@string/confirm"
-            android:textSize="16sp"
-            android:textColor="@color/major_light" />
+            android:textColor="@color/title_text_color"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
