--- a/res/layout/window_me_email.xml
+++ b/res/layout/window_me_email.xml
@@ -20,7 +20,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/back" />
+            android:src="@drawable/back_drawable" />
 
         <TextView
             android:id="@+id/titleTextView"
@@ -28,8 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/email"
-            android:textSize="20sp"
-            android:textColor="@color/major_light" />
+            android:textColor="@color/major_light"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/saveTextView"
@@ -40,8 +40,8 @@
             android:paddingRight="16dp"
             android:gravity="center"
             android:text="@string/save"
-            android:textSize="16sp"
-            android:textColor="@color/major_light" />
+            android:textColor="@color/title_text_color"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
