--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -15,8 +15,12 @@
         <attr name="border_color" format="color" />
     </declare-styleable>
     
-    <declare-styleable name="RotateTextView">
-        <attr name="rotate_degree" format="float" />
+    <declare-styleable name="ToggleButton">
+    	<attr name="borderWidth" format="dimension" />
+    	<attr name="offBorderColor" format="reference|color" />
+    	<attr name="offColor" format="reference|color" />
+    	<attr name="onColor" format="reference|color" />
+    	<attr name="spotColor" format="reference|color" />
     </declare-styleable>
 
 </resources>
