--- a/res/layout/activity_me_category_management.xml
+++ b/res/layout/activity_me_category_management.xml
@@ -19,7 +19,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/back" />
+            android:src="@drawable/back_drawable" />
 
         <TextView
             android:id="@+id/titleTextView"
@@ -39,7 +39,7 @@
 			android:paddingRight="16dp"
 			android:gravity="center"
             android:text="@string/establish"
-            android:textColor="@color/major_light"
+            android:textColor="@color/title_text_color"
             android:textSize="16sp" />
     </RelativeLayout>
 
