--- a/res/layout/activity_report_approve.xml
+++ b/res/layout/activity_report_approve.xml
@@ -18,7 +18,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/back" />
+            android:src="@drawable/back_drawable" />
 
         <TextView
             android:id="@+id/titleTextView"
@@ -38,8 +38,9 @@
 			android:paddingRight="16dp"
 			android:gravity="center"
             android:text="@string/comment"
-            android:textColor="@color/major_light"
+            android:textColor="@color/title_text_color"
             android:textSize="16sp" />
+        
     </RelativeLayout>
 
     <ListView
