--- a/res/layout/activity_start_find_by_email.xml
+++ b/res/layout/activity_start_find_by_email.xml
@@ -25,7 +25,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/back" />
+            android:src="@drawable/back_drawable" />
 
         <TextView
             android:id="@+id/titleTextView"
@@ -33,8 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/find_password_by_email"
-            android:textSize="20sp"
-            android:textColor="@color/major_light" />
+            android:textColor="@color/major_light"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
