--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -225,6 +225,43 @@
                 android:layout_marginBottom="16dp"
                 android:orientation="vertical" >
             </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/categoryTitleLayout"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical"
+				android:background="@color/list_item_header" >
+                
+				<include                 
+					android:layout_width="match_parent"
+					android:layout_height="0.5dp"
+				  	layout="@layout/view_divider"/>
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="24dp"
+					android:layout_centerVertical="true"
+					android:layout_marginLeft="16dp"
+					android:gravity="center_vertical"
+					android:text="@string/stat_by_category"
+					android:textColor="@color/font_list_item_header"
+					android:textSize="12sp" />
+                
+				<include                 
+					android:layout_width="match_parent"
+					android:layout_height="0.5dp"
+					android:layout_alignParentBottom="true"
+				  	layout="@layout/view_divider"/>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/categoryLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+            </LinearLayout>
            
         </LinearLayout>
         
