--- a/res/layout/list_report_item_edit.xml
+++ b/res/layout/list_report_item_edit.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80.5dp"
     android:orientation="vertical"
     android:background="@drawable/list_item_drawable" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="horizontal" >
         
 	    <TextView
@@ -31,10 +31,9 @@
 	    
 	    <RelativeLayout
 	        android:layout_width="0dp"
-	        android:layout_height="wrap_content"
+	        android:layout_height="match_parent"
 	        android:layout_weight="1"
 	        android:orientation="vertical"
-	        android:paddingBottom="16dp"
 	        android:layout_marginLeft="16dp"
 	        android:layout_marginRight="16dp" >
 	
