--- a/res/layout/activity_report_approve.xml
+++ b/res/layout/activity_report_approve.xml
@@ -29,17 +29,18 @@
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/commentTextView"
+        <ImageView
+            android:id="@+id/commentImageView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-			android:paddingLeft="16dp"
-			android:paddingRight="16dp"
-			android:gravity="center"
-            android:text="@string/comment"
-            android:textColor="@color/title_text_color"
-            android:textSize="16sp" />
+            android:layout_centerVertical="true"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:contentDescription="@string/comment"
+            android:src="@drawable/comment_drawable" />
         
     </RelativeLayout>
 
