--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -55,6 +55,7 @@
 			android:layout_height="20dp"
 			android:layout_alignTop="@+id/othersTitleTextView"
 			android:layout_alignRight="@+id/othersTitleTextView"
+			android:layout_marginTop="-5dp"
 			android:layout_marginRight="-10dp"
 			android:gravity="center"
 			android:textColor="@color/major_dark"
@@ -67,6 +68,7 @@
 			android:layout_height="20dp"
 			android:layout_alignTop="@+id/othersTitleTextView"
 			android:layout_alignRight="@+id/othersTitleTextView"
+			android:layout_marginTop="-5dp"
 			android:layout_marginRight="-15dp"
 			android:gravity="center"
 			android:textColor="@color/major_dark"
@@ -79,6 +81,7 @@
 			android:layout_height="20dp"
 			android:layout_alignTop="@+id/othersTitleTextView"
 			android:layout_alignRight="@+id/othersTitleTextView"
+			android:layout_marginTop="-5dp"
 			android:layout_marginRight="-20dp"
 			android:gravity="center"
 			android:text="@string/report_over_flow"
