--- a/res/layout/activity_reim_edit.xml
+++ b/res/layout/activity_reim_edit.xml
@@ -161,7 +161,7 @@
 	
 	        <RelativeLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
+	            android:layout_height="wrap_content" >
 
 	            <TextView
 	                android:layout_width="wrap_content"
@@ -176,21 +176,13 @@
 	            <LinearLayout
 	                android:id="@+id/invoiceLayout"
 	                android:layout_width="match_parent"
-	                android:layout_height="30dp"
-	                android:orientation="horizontal"
+	                android:layout_height="wrap_content"
+	                android:orientation="vertical"
+	                android:layout_alignParentTop="true"
+	                android:paddingTop="3dp"
+	                android:paddingBottom="13dp" 
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
-	                android:layout_centerVertical="true" />
-
-	            <ImageView
-	                android:id="@+id/removeImageView"
-	                android:layout_width="20dp"
-	                android:layout_height="20dp"
-	                android:layout_marginTop="3dp"
-	                android:layout_marginLeft="100dp"
-	                android:contentDescription="@string/delete"
-	                android:src="@drawable/remove"
-	                android:visibility="invisible" />
+	                android:layout_marginRight="10dp" />
 	
 	        </RelativeLayout>
             
@@ -362,7 +354,7 @@
 	            	android:orientation="vertical"
 	                android:layout_alignParentTop="true"
 	                android:layout_toLeftOf="@+id/addTagImageView"
-	                android:paddingBottom="16dp"
+	                android:paddingBottom="17dp"
 	                android:layout_marginLeft="80dp" >
 	            </LinearLayout>
 
