--- a/res/layout/grid_invoice.xml
+++ b/res/layout/grid_invoice.xml
@@ -19,6 +19,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/delete"
-        android:src="@drawable/remove" />
+        android:src="@drawable/remove"
+        android:visibility="invisible" />
 
 </RelativeLayout>
